[workspace]
members = ["raytracing_lib"]

[package]
name = "rust_raytracing"
version = "0.1.0"
edition = "2021"
authors = ["Young Gon Cha <garmede@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
raytracing_lib = { path = "raytracing_lib" }
